--- a/src/components/TinyEditor/style.less
+++ b/src/components/TinyEditor/style.less
@@ -1,10 +1,5 @@
 .tox-statusbar__branding {
-  display: none !important;
-}
-
-.tox-tinymce {
-  border: 1px solid #d9d9d9 !important;
-  border-radius: 2px !important;
+	display: none !important;
 }
 
 .tox .tox-mbtn:hover,
@@ -12,5 +7,10 @@
 .tox .tox-tbtn--enabled,
 .tox .tox-tbtn--enabled:hover,
 .tox .tox-split-button:focus {
-  background: #007eb929 !important;
+	background: #007eb929 !important;
+}
+
+.tox-tinymce {
+	border: 1px solid #eee !important;
+	border-radius: 2px !important;
 }
