Chart: Fix width

--- a/src/pages/document.ejs
+++ b/src/pages/document.ejs
@@ -43,7 +43,7 @@
 
   <noscript>Xin lỗi, chúng tôi cần trình duyệt của bạn chạy Javascript</noscript>
   <div id="root">
-    <style>
+    <!-- <style>
       html,
       body,
       #root {
@@ -233,7 +233,7 @@
       <h2>
         HỆ THỐNG PHẦN MỀM CHỈ ĐẠO, ĐIỀU HÀNH - HỌC VIỆN PHỤ NỮ VIỆT NAM
       </h2>
-    </div>
+    </div> -->
     <!-- <script src="https://www.google.com/recaptcha/api.js?onload=onloadCallback&render=explicit" async defer></script> -->
   </div>
 </body>
