--- a/src/styles/global.less
+++ b/src/styles/global.less
@@ -63,9 +63,9 @@ a {
 	}
 }
 
-.login-footer .ant-layout-footer {
-	background-color: @primary-color;
-}
+// .login-footer .ant-layout-footer {
+// 	background-color: @primary-color;
+// }
 
 .form-footer {
 	display: flex;
