--- a/src/pages/document.ejs
+++ b/src/pages/document.ejs
@@ -5,11 +5,11 @@
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="keywords"
-    content="Học viện, VWA, Trực tuyến, HỆ THỐNG PHẦN MỀM CHỈ ĐẠO, ĐIỀU HÀNH - HỌC VIỆN PHỤ NỮ VIỆT NAM, đào tạo" />
+    content="Học viện, RIPT, Trực tuyến, HỆ THỐNG PHẦN MỀM CHỈ ĐẠO, ĐIỀU HÀNH - VIỆN KHOA HỌC KỸ THUẬT BƯU ĐIỆN, đào tạo" />
   <meta property="og:image" content="/metadata.png" />
-  <meta name="description" content="HỆ THỐNG PHẦN MỀM CHỈ ĐẠO, ĐIỀU HÀNH - HỌC VIỆN PHỤ NỮ VIỆT NAM" />
+  <meta name="description" content="HỆ THỐNG PHẦN MỀM CHỈ ĐẠO, ĐIỀU HÀNH - VIỆN KHOA HỌC KỸ THUẬT BƯU ĐIỆN" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" />
-  <title>HỆ THỐNG PHẦN MỀM CHỈ ĐẠO, ĐIỀU HÀNH - HỌC VIỆN PHỤ NỮ VIỆT NAM</title>
+  <title>HỆ THỐNG PHẦN MỀM CHỈ ĐẠO, ĐIỀU HÀNH - VIỆN KHOA HỌC KỸ THUẬT BƯU ĐIỆN</title>
   <link rel="icon" href="<%= context.config.publicPath +'favicon.ico'%>" type="image/x-icon" />
 
 </head>
@@ -67,7 +67,7 @@
         margin: 0;
         padding: 0;
         color: rgba(0, 0, 0, 0.65);
-        color: #007EB9;
+        color: #CC0D00;
         font-size: 14px;
         font-variant: tabular-nums;
         line-height: 1.5;
@@ -102,7 +102,7 @@
         display: block;
         width: 9px;
         height: 9px;
-        background-color: #007EB9;
+        background-color: #CC0D00;
         border-radius: 100%;
         -webkit-transform: scale(0.75);
         -ms-transform: scale(0.75);
@@ -212,7 +212,7 @@
       .container h2 {
         font-weight: 700;
         font-size: 18px;
-        color: #007EB9;
+        color: #CC0D00;
         text-align: center;
       }
     </style>
@@ -231,7 +231,7 @@
       </div>
 
       <h2>
-        HỆ THỐNG PHẦN MỀM CHỈ ĐẠO, ĐIỀU HÀNH - HỌC VIỆN PHỤ NỮ VIỆT NAM
+        HỆ THỐNG PHẦN MỀM CHỈ ĐẠO, ĐIỀU HÀNH - VIỆN KHOA HỌC KỸ THUẬT BƯU ĐIỆN
       </h2>
     </div> -->
     <!-- <script src="https://www.google.com/recaptcha/api.js?onload=onloadCallback&render=explicit" async defer></script> -->
