--- a/src/pages/user/Login/index.less
+++ b/src/pages/user/Login/index.less
@@ -1,200 +1,201 @@
 @import '~antd/es/style/themes/default.less';
+@import '../../../styles/_variable.less';
 
 .container {
-  display: flex;
-  flex-direction: column;
-  min-height: 100vh;
-  overflow: hidden;
-  background-color: @primary-color;
+	display: flex;
+	flex-direction: column;
+	min-height: 100vh;
+	overflow: hidden;
+	background-color: @primary-color;
 }
 
 .ant-layout-footer {
-  background-color: @primary-color;
+	background-color: @primary-color;
 }
 
 .lang {
-  width: 100%;
-  height: 40px;
-  line-height: 44px;
-  text-align: right;
-  :global(.ant-dropdown-trigger) {
-    margin-right: 24px;
-  }
+	width: 100%;
+	height: 40px;
+	line-height: 44px;
+	text-align: right;
+	:global(.ant-dropdown-trigger) {
+		margin-right: 24px;
+	}
 }
 
 .content {
-  flex: 1;
-  padding: 32px 12px;
+	flex: 1;
+	padding: 32px 12px;
 }
 
 .top {
-  text-align: center;
-  // min-height: 300px;
+	text-align: center;
+	// min-height: 300px;
 }
 
 .header {
-  margin-top: 50px;
-  line-height: 60px;
-  a {
-    text-decoration: none;
-  }
+	margin-top: 50px;
+	line-height: 60px;
+	a {
+		text-decoration: none;
+	}
 }
 
 .logo {
-  width: 100%;
-  max-width: 400px;
-  vertical-align: top;
+	width: 100%;
+	max-width: 400px;
+	vertical-align: top;
 }
 
 .title2 {
-  position: relative;
-  top: 2px;
-  color: #007eb9;
-  font-weight: 600;
-  font-size: 30px;
-  font-family: Avenir, 'Helvetica Neue', Arial, Helvetica, sans-serif;
+	position: relative;
+	top: 2px;
+	color: @primary-color;
+	font-weight: 600;
+	font-size: 30px;
+	font-family: Avenir, 'Helvetica Neue', Arial, Helvetica, sans-serif;
 }
 
 .title3 {
-  position: relative;
-  top: 2px;
-  color: #007eb9;
-  font-weight: 600;
-  font-size: 30px;
-  font-family: Avenir, 'Helvetica Neue', Arial, Helvetica, sans-serif;
+	position: relative;
+	top: 2px;
+	color: @primary-color;
+	font-weight: 600;
+	font-size: 30px;
+	font-family: Avenir, 'Helvetica Neue', Arial, Helvetica, sans-serif;
 }
 
 .title1 {
-  position: relative;
-  top: 2px;
-  color: #0065ca;
-  font-weight: 600;
-  font-size: 33px;
-  font-family: Avenir, 'Helvetica Neue', Arial, Helvetica, sans-serif;
+	position: relative;
+	top: 2px;
+	color: #0065ca;
+	font-weight: 600;
+	font-size: 33px;
+	font-family: Avenir, 'Helvetica Neue', Arial, Helvetica, sans-serif;
 }
 
 .desc {
-  margin-top: 12px;
-  margin-bottom: 40px;
-  color: @text-color-secondary;
-  font-size: @font-size-base;
+	margin-top: 12px;
+	margin-bottom: 40px;
+	color: @text-color-secondary;
+	font-size: @font-size-base;
 }
 
 .main {
-  position: relative;
-  z-index: 99;
-  width: 440px;
-  margin: 0 auto;
-  margin-top: 32px;
-  padding: 24px;
-  background: #fff;
-  border-radius: 4px;
+	position: relative;
+	z-index: 99;
+	width: 440px;
+	margin: 0 auto;
+	margin-top: 32px;
+	padding: 24px;
+	background: #fff;
+	border-radius: 4px;
 
-  &::before {
-    position: absolute;
-    top: -65px;
-    left: -424px;
-    z-index: -1;
-    width: 600px;
-    height: 300px;
-    background-image: url('/frame1.svg');
-    background-size: 100%;
-    content: '';
-  }
+	&::before {
+		position: absolute;
+		top: -65px;
+		left: -424px;
+		z-index: -1;
+		width: 600px;
+		height: 300px;
+		background-image: url('/frame1.svg');
+		background-size: 100%;
+		content: '';
+	}
 
-  &::after {
-    position: absolute;
-    top: -56px;
-    right: -443px;
-    z-index: -1;
-    width: 600px;
-    height: 300px;
-    background-image: url('/frame2.svg');
-    background-repeat: no-repeat;
-    background-size: 100%;
-    content: '';
-  }
+	&::after {
+		position: absolute;
+		top: -56px;
+		right: -443px;
+		z-index: -1;
+		width: 600px;
+		height: 300px;
+		background-image: url('/frame2.svg');
+		background-repeat: no-repeat;
+		background-size: 100%;
+		content: '';
+	}
 
-  @media screen and (max-width: @screen-sm) {
-    max-width: 100%;
-    &::before {
-      display: none;
-    }
-    &::after {
-      top: 300px;
-      right: -66px;
-    }
-  }
+	@media screen and (max-width: @screen-sm) {
+		max-width: 100%;
+		&::before {
+			display: none;
+		}
+		&::after {
+			top: 300px;
+			right: -66px;
+		}
+	}
 
-  :global {
-    .@{ant-prefix}-tabs-nav-list {
-      margin: auto;
-      font-size: 16px;
-    }
-  }
+	:global {
+		.@{ant-prefix}-tabs-nav-list {
+			margin: auto;
+			font-size: 16px;
+		}
+	}
 
-  .icon {
-    margin-left: 16px;
-    color: rgba(0, 0, 0, 0.2);
-    font-size: 24px;
-    vertical-align: middle;
-    cursor: pointer;
-    transition: color 0.3s;
+	.icon {
+		margin-left: 16px;
+		color: rgba(0, 0, 0, 0.2);
+		font-size: 24px;
+		vertical-align: middle;
+		cursor: pointer;
+		transition: color 0.3s;
 
-    &:hover {
-      color: @primary-color;
-    }
-  }
+		&:hover {
+			color: @primary-color;
+		}
+	}
 
-  .other {
-    margin-top: 24px;
-    line-height: 22px;
-    text-align: left;
-    .register {
-      float: right;
-    }
-  }
+	.other {
+		margin-top: 24px;
+		line-height: 22px;
+		text-align: left;
+		.register {
+			float: right;
+		}
+	}
 
-  .prefixIcon {
-    margin-right: 6px;
-    color: @primary-color;
-    font-size: @font-size-base;
-  }
+	.prefixIcon {
+		margin-right: 6px;
+		color: @primary-color;
+		font-size: @font-size-base;
+	}
 }
 
 @media screen and (max-width: @screen-xl) {
-  .title2 {
-    font-size: 25px;
-  }
+	.title2 {
+		font-size: 25px;
+	}
 }
 
 @media screen and (max-width: @screen-lg) {
-  .title2 {
-    font-size: 20px;
-  }
+	.title2 {
+		font-size: 20px;
+	}
 }
 
 @media screen and (max-width: 899px) {
-  .title1 {
-    font-size: 22px;
-  }
-  .title2 {
-    font-size: 18px;
-    line-height: 30px;
-  }
-  .title3 {
-    font-size: 22px;
-  }
+	.title1 {
+		font-size: 22px;
+	}
+	.title2 {
+		font-size: 18px;
+		line-height: 30px;
+	}
+	.title3 {
+		font-size: 22px;
+	}
 }
 
 @media screen and (max-width: 695px) {
-  .header {
-    margin-bottom: 30px;
-  }
+	.header {
+		margin-bottom: 30px;
+	}
 }
 
 @media screen and (max-width: 377px) {
-  .header {
-    margin-bottom: 80px;
-  }
+	.header {
+		margin-bottom: 80px;
+	}
 }
