--- a/src/components/Table/style.less
+++ b/src/components/Table/style.less
@@ -2,117 +2,121 @@
 @import '../../styles/_variable.less';
 
 .table-base {
-  .header {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 8px;
-    justify-content: space-between;
-    margin-bottom: 8px;
+	.header {
+		display: flex;
+		flex-wrap: wrap;
+		gap: 8px;
+		justify-content: space-between;
+		margin-bottom: 8px;
 
-    .action {
-      display: flex;
-      flex-wrap: wrap;
-      gap: 8px;
-    }
+		.action {
+			display: flex;
+			flex-wrap: wrap;
+			gap: 8px;
+		}
 
-    .extra {
-      display: flex;
-      flex-wrap: wrap;
-      gap: 8px;
-      justify-content: flex-end;
+		.extra {
+			display: flex;
+			flex-wrap: wrap;
+			gap: 8px;
+			justify-content: flex-end;
 
-      .total {
-        height: 32px;
-        padding: 0 15px;
-        line-height: 1.5715;
-        white-space: nowrap;
-        border: 1px solid #d9d9d9;
-        border-radius: @border-radius;
-        transition: 0.3s;
+			.total {
+				height: 32px;
+				padding: 0 15px;
+				line-height: 1.5715;
+				white-space: nowrap;
+				border: 1px solid #d9d9d9;
+				border-radius: @border-radius;
+				transition: 0.3s;
 
-        &:hover {
-          border-color: @primary-color;
-          transition: 0.3s;
-        }
+				&:hover {
+					border-color: @primary-color;
+					transition: 0.3s;
+				}
 
-        span {
-          margin-left: 8px;
-          color: @primary-color;
-          font-weight: 700;
-          font-size: 1.1rem;
-        }
-      }
-    }
+				span {
+					margin-left: 8px;
+					color: @primary-color;
+					font-weight: 700;
+					font-size: 1.1rem;
+				}
+			}
+		}
 
-    @media (max-width: @screen-xs) {
-      .extend {
-        display: none;
-      }
+		@media (max-width: @screen-xs) {
+			.extend {
+				display: none;
+			}
 
-      .extra {
-        width: 100%;
-      }
-    }
-  }
+			.extra {
+				width: 100%;
+			}
+		}
+	}
 
-  /* Track */
-  ::-webkit-scrollbar-track {
-    background: #f0f0f0;
-  }
+	/* Track */
+	::-webkit-scrollbar-track {
+		background: #f0f0f0;
+	}
 }
 
 .filter-item-space {
-  width: 100%;
-  margin-bottom: 12px;
-  border-bottom: 1px solid #f1f1f1;
+	width: 100%;
+	margin-bottom: 12px;
+	border-bottom: 1px solid #f1f1f1;
 
-  .ant-space-item:last-child {
-    width: 100%;
-  }
+	.ant-space-item:last-child {
+		width: 100%;
+	}
 }
 
 .ant-modal.modal-ho-so-nhan-su {
-  top: 0;
-  width: 100vw !important;
-  height: 100vh;
-  margin: 0;
-  .ant-modal-content {
-    width: 100vw;
-    height: 100vh;
-    border-radius: 0px;
-  }
+	top: 0;
+	width: 100vw !important;
+	height: 100vh;
+	margin: 0;
+	.ant-modal-content {
+		width: 100vw;
+		height: 100vh;
+		border-radius: 0px;
+	}
 }
 
 .column-search-box {
-  display: flex;
-  gap: 5px;
-  padding: 8px;
+	display: flex;
+	gap: 5px;
+	padding: 8px;
 }
 
 .ant-modal.modal-ho-so-nhan-su {
-  @media (min-width: @screen-md) {
-    top: 0;
-    width: 100vw !important;
-    height: 100vh;
-    margin: 0;
-    .ant-modal-content {
-      width: 100vw;
-      height: 100vh;
-      border-radius: 0px;
-    }
-  }
+	@media (min-width: @screen-md) {
+		top: 0;
+		width: 100vw !important;
+		height: 100vh;
+		margin: 0;
+		.ant-modal-content {
+			width: 100vw;
+			height: 100vh;
+			border-radius: 0px;
+		}
+	}
 }
 
 .row-dragging {
-  z-index: 1001;
-  background: #fafafa;
-  border: 1px solid #ccc;
+	z-index: 1001;
+	background: #fafafa;
+	border: 1px solid #ccc;
 }
 
 .row-dragging td {
-  padding: 3px 12px !important;
+	padding: 3px 12px !important;
 }
 
 .row-dragging .drag-visible {
-  visibility: visible;
+	visibility: visible;
+}
+
+.column-search-box {
+	flex-direction: column;
 }
