fix stylelint + thay biến màu @primary-color trong less = biến màu css

--- a/src/components/RightContent/index.less
+++ b/src/components/RightContent/index.less
@@ -59,13 +59,13 @@
 	}
 
 	.name {
-		color: #ffffff;
+		color: #fff;
 	}
 
 	.account {
 		.avatar {
 			margin-right: 8px;
-			color: @primary-color;
+			color: var(--primary-color);
 			vertical-align: top;
 			background: rgba(255, 255, 255);
 		}
