--- a/src/pages/document.ejs
+++ b/src/pages/document.ejs
@@ -19,7 +19,7 @@
 		<link rel="icon" href="<%= context.config.publicPath +'favicon.ico'%>" type="image/x-icon" />
 		<style>
 			:root {
-				--color-primary: <%= context.config.define.APP_CONFIG_PRIMARY_COLOR %>;
+				--primary-color: <%= context.config.define.APP_CONFIG_PRIMARY_COLOR %>;
 			}
 		</style>
 	</head>
