--- a/src/pages/user/Login/index.less
+++ b/src/pages/user/Login/index.less
@@ -6,11 +6,11 @@
 	flex-direction: column;
 	min-height: 100vh;
 	overflow: hidden;
-	background-color: @primary-color;
+	background-color: var(--primary-color);
 }
 
 .ant-layout-footer {
-	background-color: @primary-color;
+	background-color: var(--primary-color);
 }
 
 .lang {
@@ -50,7 +50,7 @@
 .title2 {
 	position: relative;
 	top: 2px;
-	color: @primary-color;
+	color: var(--primary-color);
 	font-weight: 600;
 	font-size: 30px;
 	font-family: Avenir, 'Helvetica Neue', Arial, Helvetica, sans-serif;
@@ -59,7 +59,7 @@
 .title3 {
 	position: relative;
 	top: 2px;
-	color: @primary-color;
+	color: var(--primary-color);
 	font-weight: 600;
 	font-size: 30px;
 	font-family: Avenir, 'Helvetica Neue', Arial, Helvetica, sans-serif;
@@ -143,7 +143,7 @@
 		transition: color 0.3s;
 
 		&:hover {
-			color: @primary-color;
+			color: var(--primary-color);
 		}
 	}
 
@@ -158,7 +158,7 @@
 
 	.prefixIcon {
 		margin-right: 6px;
-		color: @primary-color;
+		color: var(--primary-color);
 		font-size: @font-size-base;
 	}
 }
