--- a/src/styles/layout.less
+++ b/src/styles/layout.less
@@ -1,6 +1,6 @@
 .ant-pro-header-light {
 	.ant-pro-global-header-layout-mix {
-		background-color: @primary-color;
+		background-color: var(--primary-color);
 
 		.ant-pro-global-header-logo a img {
 			height: 100%;
@@ -47,7 +47,7 @@
 	li.ant-menu-item-selected {
 		padding-left: 12px !important;
 		color: white;
-		background-color: @primary-color;
+		background-color: var(--primary-color);
 	}
 
 	.ant-menu-submenu {
