--- a/src/pages/document.ejs
+++ b/src/pages/document.ejs
@@ -1,41 +1,34 @@
 <!DOCTYPE html>
 <html lang="vi">
-	<head>
-		<meta charset="utf-8" />
-		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
-		<meta
-			name="keywords"
-			content="<%= context.config.define.APP_CONFIG_TIEN_TO_TRUONG %>, <%= context.config.define.APP_CONFIG_TEN_TRUONG_VIET_TAT_TIENG_ANH %>, Trực tuyến, HỆ THỐNG PHẦN MỀM CHỈ ĐẠO, ĐIỀU HÀNH - <%= context.config.define.APP_CONFIG_TEN_TRUONG.toUpperCase() %>, đào tạo"
-		/>
-		<meta property="og:image" content="/metadata.png" />
-		<meta
-			name="description"
-			content="HỆ THỐNG PHẦN MỀM CHỈ ĐẠO, ĐIỀU HÀNH - <%= context.config.define.APP_CONFIG_TEN_TRUONG.toUpperCase() %>"
-		/>
-		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" />
-		<title>
-			HỆ THỐNG PHẦN MỀM CHỈ ĐẠO, ĐIỀU HÀNH - <%= context.config.define.APP_CONFIG_TEN_TRUONG.toUpperCase() %>
-		</title>
-		<link rel="icon" href="<%= context.config.publicPath +'favicon.ico'%>" type="image/x-icon" />
-		<style>
-			:root {
-				--primary-color: <%= context.config.define.APP_CONFIG_PRIMARY_COLOR %>;
-			}
-		</style>
-	</head>
-	<body>
-		<div
-			class="fb-customerchat"
-			attribution="setup_tool"
-			page_id="101402285211797"
-			logged_in_greeting="Xin chào, chúng tôi có thể giúp gì cho bạn?"
-			logged_out_greeting="Xin chào, chúng tôi có thể giúp gì cho bạn?"
-		></div>
 
-		<noscript>Xin lỗi, chúng tôi cần trình duyệt của bạn chạy Javascript</noscript>
-		<div id="root"></div>
-		<script>
-			console.log('');
-		</script>
-	</body>
+<head>
+	<meta charset="utf-8" />
+	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+	<meta name="keywords"
+		content="<%= context.config.define.APP_CONFIG_TIEN_TO_TRUONG %>, <%= context.config.define.APP_CONFIG_TEN_TRUONG_VIET_TAT_TIENG_ANH %>, Trực tuyến, HỆ THỐNG PHẦN MỀM CHỈ ĐẠO, ĐIỀU HÀNH - <%= context.config.define.APP_CONFIG_TEN_TRUONG.toUpperCase() %>, đào tạo" />
+	<meta property="og:image" content="/metadata.png" />
+	<meta name="description"
+		content="HỆ THỐNG PHẦN MỀM CHỈ ĐẠO, ĐIỀU HÀNH - <%= context.config.define.APP_CONFIG_TEN_TRUONG.toUpperCase() %>" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" />
+	<title>
+		HỆ THỐNG PHẦN MỀM CHỈ ĐẠO, ĐIỀU HÀNH - <%= context.config.define.APP_CONFIG_TEN_TRUONG.toUpperCase() %>
+	</title>
+	<link rel="icon" href="<%= context.config.publicPath +'favicon.ico'%>" type="image/x-icon" />
+	<style>
+		:root {
+			--primary-color: <%=context.config.define.APP_CONFIG_PRIMARY_COLOR %>;
+		}
+	</style>
+</head>
+
+<body>
+	<div class="fb-customerchat" attribution="setup_tool" page_id="101402285211797"
+		logged_in_greeting="Xin chào, chúng tôi có thể giúp gì cho bạn?"
+		logged_out_greeting="Xin chào, chúng tôi có thể giúp gì cho bạn?"></div>
+
+	<noscript>Xin lỗi, chúng tôi cần trình duyệt của bạn chạy Javascript</noscript>
+	<div id="root"></div>
+
+</body>
+
 </html>
