Update env, Primary Color

--- a/src/pages/document.ejs
+++ b/src/pages/document.ejs
@@ -16,7 +16,7 @@
 	<link rel="icon" href="<%= context.config.publicPath +'favicon.ico'%>" type="image/x-icon" />
 	<style>
 		:root {
-			--primary-color: <%=context.config.define.APP_CONFIG_PRIMARY_COLOR %>;
+			--primary-color: var(--ant-primary-color)
 		}
 	</style>
 </head>
