--- a/src/styles/global.less
+++ b/src/styles/global.less
@@ -1,4 +1,5 @@
 @import '~antd/es/style/themes/default.less';
+@import '~antd/dist/antd.variable.min.css';
 @import '_variable.less';
 @import 'layout.less';
 
