CSS: add class btn-success to link

--- a/src/styles/global.less
+++ b/src/styles/global.less
@@ -142,6 +142,11 @@ a {
 		}
 	}
 
+	&.ant-btn-link {
+		color: var(--ant-success-color);
+		border: none;
+	}
+
 	&:hover {
 		border-color: var(--ant-success-color-hover);
 		&:not(.ant-btn-primary) {
