CSS: btn-success fix disabled

--- a/src/styles/global.less
+++ b/src/styles/global.less
@@ -135,7 +135,7 @@ a {
 .btn-success {
 	border-color: var(--ant-success-color);
 
-	&.ant-btn-primary {
+	&.ant-btn-primary:not(:disabled) {
 		background-color: var(--ant-success-color);
 		&:hover {
 			background-color: var(--ant-success-color-hover);
