--- a/src/styles/global.less
+++ b/src/styles/global.less
@@ -377,19 +377,19 @@ canvas {
 }
 
 .text-info {
-	color: @info-color;
+	color: var(--ant-info-color);
 }
 
 .text-success {
-	color: @success-color;
+	color: var(--ant-success-color);
 }
 
 .text-warning {
-	color: @warning-color;
+	color: var(--ant-warning-color);
 }
 
 .text-error {
-	color: @error-color;
+	color: var(--ant-error-color);
 }
 
 @media (max-width: @screen-xs) {
