CSS: update card-stat-small

--- a/src/styles/global.less
+++ b/src/styles/global.less
@@ -128,29 +128,6 @@ a {
 	border-color: var(--primary-color);
 }
 
-.card-stat-small {
-	.ant-card-body {
-		display: flex;
-		gap: 8px;
-		align-items: center;
-		height: 100%;
-		padding: 8px 12px 8px 4px;
-
-		transition: 0.3s;
-
-		&:hover {
-			background-color: #fafafa;
-			transition: 0.3s;
-		}
-	}
-
-	.num {
-		color: var(--primary-color);
-		font-weight: 700;
-		font-size: 1.25rem;
-	}
-}
-
 .btn-success {
 	border-color: var(--ant-success-color);
 
@@ -345,6 +322,30 @@ canvas {
 		.ant-divider-inner-text {
 			padding: 0;
 		}
+	}
+}
+
+// Card Statistics Small
+.card-stat-small {
+	.ant-card-body {
+		display: flex;
+		gap: 8px;
+		align-items: center;
+		height: 100%;
+		padding: 8px 12px 8px 4px;
+
+		transition: 0.3s;
+
+		&:hover {
+			background-color: #fafafa;
+			transition: 0.3s;
+		}
+	}
+
+	.num {
+		color: var(--primary-color);
+		font-weight: 700;
+		font-size: 1.25rem;
 	}
 }
 
