--- a/src/styles/global.less
+++ b/src/styles/global.less
@@ -372,27 +372,27 @@ canvas {
 }
 
 .bg-primary-selected {
-	background-color: @primary-1;
+	background-color: @primary-1 !important;
 }
 
 .text-primary {
-	color: var(--primary-color);
+	color: var(--primary-color) !important;
 }
 
 .text-info {
-	color: var(--ant-info-color);
+	color: var(--ant-info-color) !important;
 }
 
 .text-success {
-	color: var(--ant-success-color);
+	color: var(--ant-success-color) !important;
 }
 
 .text-warning {
-	color: var(--ant-warning-color);
+	color: var(--ant-warning-color) !important;
 }
 
 .text-error {
-	color: var(--ant-error-color);
+	color: var(--ant-error-color) !important;
 }
 
 .bg-highlight {
