CSS: Fix Login footer

--- a/src/pages/user/Login/index.less
+++ b/src/pages/user/Login/index.less
@@ -9,7 +9,7 @@
 	background-color: var(--primary-color);
 }
 
-.ant-layout-footer {
+:global(.login-footer .ant-layout-footer) {
 	background-color: var(--primary-color);
 }
 
