➕ Add Split Panel (Sample: QLDT)

--- a/src/styles/global.less
+++ b/src/styles/global.less
@@ -2,6 +2,7 @@
 @import '~antd/dist/antd.variable.min.css';
 @import '_variable.less';
 @import 'layout.less';
+@import 'split-panel.less';
 
 html,
 body,
