--- a/src/styles/global.less
+++ b/src/styles/global.less
@@ -373,7 +373,7 @@ canvas {
 }
 
 .bg-primary-selected {
-	background-color: @primary-1 !important;
+	background-color: var(--primary-1) !important;
 }
 
 .text-primary {
