Update color CSS variables

--- a/src/components/TinyEditor/style.less
+++ b/src/components/TinyEditor/style.less
@@ -10,7 +10,7 @@
 .tox .tox-tbtn--enabled,
 .tox .tox-tbtn--enabled:hover,
 .tox .tox-split-button:focus {
-	background: @primary-1 !important;
+	background: var(--primary-1) !important;
 }
 
 .tox-tinymce {
@@ -20,6 +20,6 @@
 }
 
 .tox-tinymce:hover {
-	border-color: @primary-4 !important;
+	border-color: var(--primary-color) !important;
 	transition: 0.3s;
 }
