--- a/src/styles/split-panel.less
+++ b/src/styles/split-panel.less
@@ -42,8 +42,8 @@
 		&:hover,
 		&:active {
 			background-color: var(--primary-color) !important;
-			border-right: 5px solid @primary-1 !important;
-			border-left: 5px solid @primary-1 !important;
+			border-right: 5px solid var(--primary-1) !important;
+			border-left: 5px solid var(--primary-1) !important;
 		}
 	}
 
