Split panel: Disable horizontal split view

--- a/src/styles/split-panel.less
+++ b/src/styles/split-panel.less
@@ -55,3 +55,10 @@
 		display: none;
 	}
 }
+
+[data-type='SplitPane'] {
+	&[data-split='horizontal'] > div {
+		height: auto !important;
+		max-height: 100% !important;
+	}
+}
