--- a/src/components/Table/style.less
+++ b/src/components/Table/style.less
@@ -114,8 +114,17 @@
 }
 
 @media (max-width: @screen-xs) {
-	.span-extend {
-		display: none;
+	.ant-btn:has(.span-extend) {
+		// antd btn icon only
+		width: 32px;
+		height: 32px;
+		padding: 2.4px 0;
+		font-size: 16px;
+		vertical-align: -3px;
+
+		.span-extend {
+			display: none;
+		}
 	}
 
 	// .extra {
