Header: Cập nhật header page

--- a/src/components/RightContent/index.less
+++ b/src/components/RightContent/index.less
@@ -58,16 +58,22 @@
 		}
 	}
 
+	a,
+	a:hover {
+		color: rgba(0, 0, 0, 0.85);
+	}
+
 	.name {
-		color: #fff;
+		color: rgba(0, 0, 0, 0.85);
 	}
 
 	.account {
 		.avatar {
 			margin-right: 8px;
-			color: var(--primary-color);
-			vertical-align: top;
-			background: rgba(255, 255, 255);
+			:global(.anticon) {
+				height: 32px;
+				font-size: 32px;
+			}
 		}
 	}
 }
