CSS: Update sidebar CSS

--- a/src/styles/layout.less
+++ b/src/styles/layout.less
@@ -98,8 +98,8 @@
 	.ant-menu-submenu-title {
 		height: auto !important;
 		min-height: 36px;
-		// padding-top: 5px;
-		// padding-bottom: 5px;
+		padding-top: 5px;
+		padding-bottom: 5px;
 		line-height: 1.5 !important;
 		border-radius: 2px;
 
@@ -117,6 +117,8 @@
 	.ant-menu-item,
 	.ant-menu-submenu-title {
 		height: 40px !important;
+		padding-top: 0;
+		padding-bottom: 0;
 	}
 }
 
