CSS: Fix CSS alert

--- a/src/styles/global.less
+++ b/src/styles/global.less
@@ -401,6 +401,21 @@ canvas {
 	background-color: #ffc069;
 }
 
+.ant-alert {
+	flex-wrap: wrap;
+	gap: 8px;
+	align-items: center;
+
+	.ant-alert-content {
+		flex: auto;
+	}
+
+	.ant-alert-action,
+	.ant-alert-close-icon {
+		margin-left: 0;
+	}
+}
+
 @media (max-width: @screen-xs) {
 	.ant-drawer-content-wrapper {
 		width: 100% !important;
