Update: Hệ thống chuyển đổi số

--- a/src/pages/document.ejs
+++ b/src/pages/document.ejs
@@ -5,13 +5,13 @@
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="keywords"
-    content="<%= context.config.define.APP_CONFIG_TIEN_TO_TRUONG %>, <%= context.config.define.APP_CONFIG_TEN_TRUONG_VIET_TAT_TIENG_ANH %>, Trực tuyến, HỆ THỐNG PHẦN MỀM CHỈ ĐẠO, ĐIỀU HÀNH - <%= context.config.define.APP_CONFIG_TEN_TRUONG.toUpperCase() %>, đào tạo" />
+    content="<%= context.config.define.APP_CONFIG_TIEN_TO_TRUONG %>, <%= context.config.define.APP_CONFIG_TEN_TRUONG_VIET_TAT_TIENG_ANH %>, Trực tuyến, HỆ THỐNG CHUYỂN ĐỔI SỐ - <%= context.config.define.APP_CONFIG_TEN_TRUONG.toUpperCase() %>, đào tạo" />
   <meta property="og:image" content="/metadata.png" />
   <meta name="description"
-    content="HỆ THỐNG PHẦN MỀM CHỈ ĐẠO, ĐIỀU HÀNH - <%= context.config.define.APP_CONFIG_TEN_TRUONG.toUpperCase() %>" />
+    content="HỆ THỐNG CHUYỂN ĐỔI SỐ - <%= context.config.define.APP_CONFIG_TEN_TRUONG.toUpperCase() %>" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" />
   <title>
-    HỆ THỐNG PHẦN MỀM CHỈ ĐẠO, ĐIỀU HÀNH - <%= context.config.define.APP_CONFIG_TEN_TRUONG.toUpperCase() %>
+    HỆ THỐNG CHUYỂN ĐỔI SỐ - <%= context.config.define.APP_CONFIG_TEN_TRUONG.toUpperCase() %>
   </title>
   <link rel="icon" href="<%= context.config.publicPath +'favicon.ico'%>" type="image/x-icon" />
   <style>
