Table: Update size small

--- a/src/components/Table/style.less
+++ b/src/components/Table/style.less
@@ -41,6 +41,12 @@
 					font-weight: 700;
 					font-size: 1.1rem;
 				}
+
+				&.small {
+					height: 24px;
+					padding: 0 7px;
+					line-height: 20px;
+				}
 			}
 		}
 	}
