Menu: Chuyển sang link

--- a/src/styles/global.less
+++ b/src/styles/global.less
@@ -34,6 +34,10 @@ a {
 		opacity: 1;
 		transition: 0.3s;
 	}
+
+	&.not-underline::after {
+		display: none;
+	}
 }
 
 .ant-descriptions-item-label,
