--- a/src/styles/global.less
+++ b/src/styles/global.less
@@ -112,6 +112,7 @@ a {
 ::-webkit-scrollbar-thumb:hover {
 	background: #555;
 }
+
 .rbc-day-slot .rbc-event,
 .rbc-day-slot .rbc-background-event {
 	border: none !important;
@@ -138,6 +139,7 @@ a {
 
 	&.ant-btn-primary:not(:disabled) {
 		background-color: var(--ant-success-color);
+
 		&:hover {
 			background-color: var(--ant-success-color-hover);
 		}
@@ -150,8 +152,34 @@ a {
 
 	&:hover {
 		border-color: var(--ant-success-color-hover);
+
 		&:not(.ant-btn-primary) {
 			color: var(--ant-success-color-hover);
+		}
+	}
+}
+
+.btn-warning {
+	border-color: var(--ant-warning-color);
+
+	&.ant-btn-primary:not(:disabled) {
+		background-color: var(--ant-warning-color);
+
+		&:hover {
+			background-color: var(--ant-warning-color-hover);
+		}
+	}
+
+	&.ant-btn-link {
+		color: var(--ant-warning-color);
+		border: none;
+	}
+
+	&:hover {
+		border-color: var(--ant-warning-color-hover);
+
+		&:not(.ant-btn-primary) {
+			color: var(--ant-warning-color-hover);
 		}
 	}
 }
@@ -188,10 +216,10 @@ canvas {
 		height: 100vh;
 		overflow: hidden;
 
-		> .ant-modal-content {
+		>.ant-modal-content {
 			border-radius: 0;
 
-			> .ant-modal-body {
+			>.ant-modal-body {
 				height: 100vh;
 			}
 		}
@@ -202,18 +230,18 @@ canvas {
 	font-weight: 600;
 }
 
-.ant-tabs-card.ant-tabs-top > .ant-tabs-nav .ant-tabs-nav-list,
-.ant-tabs-card.ant-tabs-top > div > .ant-tabs-nav .ant-tabs-nav-list {
+.ant-tabs-card.ant-tabs-top>.ant-tabs-nav .ant-tabs-nav-list,
+.ant-tabs-card.ant-tabs-top>div>.ant-tabs-nav .ant-tabs-nav-list {
 	display: block;
 }
 
-.ant-tabs-card.ant-tabs-top > .ant-tabs-nav .ant-tabs-nav-wrap,
-.ant-tabs-card.ant-tabs-top > div > .ant-tabs-nav .ant-tabs-nav-wrap {
+.ant-tabs-card.ant-tabs-top>.ant-tabs-nav .ant-tabs-nav-wrap,
+.ant-tabs-card.ant-tabs-top>div>.ant-tabs-nav .ant-tabs-nav-wrap {
 	white-space: inherit;
 }
 
-.ant-tabs-card.ant-tabs-top > .ant-tabs-nav .ant-tabs-tab,
-.ant-tabs-card.ant-tabs-top > div > .ant-tabs-nav .ant-tabs-tab {
+.ant-tabs-card.ant-tabs-top>.ant-tabs-nav .ant-tabs-tab,
+.ant-tabs-card.ant-tabs-top>div>.ant-tabs-nav .ant-tabs-tab {
 	margin-bottom: 4px;
 	font-weight: 600;
 	border-radius: 4px 4px 0 0;
@@ -231,7 +259,7 @@ canvas {
 	padding: 13px 20px !important;
 }
 
-.ant-form-item-label > label {
+.ant-form-item-label>label {
 	height: auto;
 	margin: 4px 0 !important;
 }
@@ -263,6 +291,7 @@ canvas {
 
 	.ant-card-body {
 		padding: 18px;
+
 		@media (max-width: @screen-xs) {
 			padding: 12px;
 		}
@@ -285,6 +314,7 @@ canvas {
 
 	.ant-modal-body {
 		padding: 18px;
+
 		@media (max-width: @screen-xs) {
 			padding: 12px;
 		}
@@ -295,12 +325,12 @@ canvas {
 .ant-drawer .ant-card-body {
 	@media (min-width: @screen-xl) {
 		.ant-tabs-left {
-			.ant-tabs-tab + .ant-tabs-tab {
+			.ant-tabs-tab+.ant-tabs-tab {
 				margin: 10px 0 0 0;
 			}
 		}
 
-		.ant-tabs-left > .ant-tabs-content-holder > .ant-tabs-content > .ant-tabs-tabpane {
+		.ant-tabs-left>.ant-tabs-content-holder>.ant-tabs-content>.ant-tabs-tabpane {
 			padding-left: 18px;
 		}
 	}
@@ -432,12 +462,15 @@ canvas {
 	.ant-table {
 		width: 100%;
 		overflow-x: auto;
-		&-thead > tr,
-		&-tbody > tr {
-			> th,
-			> td {
+
+		&-thead>tr,
+		&-tbody>tr {
+
+			>th,
+			>td {
+
 				// white-space: pre;
-				> span {
+				>span {
 					display: block;
 				}
 			}
