--- a/src/styles/global.less
+++ b/src/styles/global.less
@@ -324,7 +324,7 @@ canvas {
 .ant-modal .ant-card-body,
 .ant-drawer .ant-card-body {
 	@media (min-width: @screen-xl) {
-		.ant-tabs-left {
+		.ant-tabs-left>.ant-tabs-nav {
 			.ant-tabs-tab+.ant-tabs-tab {
 				margin: 10px 0 0 0;
 			}
