--- a/src/styles/global.less
+++ b/src/styles/global.less
@@ -471,6 +471,8 @@ canvas {
 			transition: all .3s cubic-bezier(.645, .045, .355, 1);
 			color: rgba(0, 0, 0, .85);
 			border: 1px solid #d9d9d9;
+
+			line-height: 1.5715;
 		}
 	}
 }
