Tiny: Update style

--- a/src/styles/global.less
+++ b/src/styles/global.less
@@ -48,7 +48,7 @@ a {
 
 .ant-checkbox {
 	.ant-checkbox-inner {
-		border-radius: 2px;
+		border-radius: @border-radius;
 	}
 }
 
@@ -462,7 +462,7 @@ canvas {
 
 		button {
 			padding: 4px 15px;
-			border-radius: 2px;
+			border-radius: @border-radius;
 			font-size: 14px;
 			height: 32px;
 
