Thông báo: Fix style

--- a/src/pages/ThongBao/components/style.less
+++ b/src/pages/ThongBao/components/style.less
@@ -4,8 +4,11 @@
     height: auto;
   }
 
-  ol,
   ul {
-    list-style: auto;
+    list-style: disc;
+  }
+
+  ol {
+    list-style: decimal;
   }
 }
